fix fonts on iOS safari

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
+
 /* CSS variables */
 :root {
   --color-bg: #fffcf2;
@@ -21,17 +23,6 @@
   display: none !important;
 }
 
-/* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
-@font-face {
-  font-family: HK Grotesk;
-  src: url("fonts/HKGrotesk-Regular.otf") format("opentype");
-}
-@font-face {
-  font-family: HK Grotesk;
-  font-weight: bold;
-  src: url("fonts/HKGrotesk-Bold.otf") format("opentype");
-}
 
 
 /* Page structure */
